<resources>
    <string name="app_name">PixabayTestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="likes">Likes</string>
    <string name="informaci_n">Información</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="seguro_quieres_salir_de_la_app">Seguro quieres salir de la app?</string>

    <string-array name="category">
        <item>science</item>
        <item>education</item>
        <item>people</item>
        <item>feelings</item>
        <item>buildings</item>
    </string-array>
</resources>