<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informaci_n"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/v_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_information"
        android:background="@color/seconndary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_h"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_heart"
        android:tint="@color/primary_color"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/v_separator"
        app:layout_constraintStart_toStartOf="parent"
     />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/iv_total_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="100"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_h"

        app:layout_constraintStart_toStartOf="@+id/iv_h"
        app:layout_constraintTop_toBottomOf="@+id/iv_h" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_total_likes"
        app:layout_constraintStart_toStartOf="@+id/iv_total_likes"
        app:layout_constraintTop_toBottomOf="@+id/iv_total_likes" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_views"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_views"
        android:tint="@color/primary_color"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@+id/v_separator"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/iv_total_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="100"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_views"

        app:layout_constraintStart_toStartOf="@+id/iv_views"
        app:layout_constraintTop_toBottomOf="@+id/iv_views" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_total_views"
        app:layout_constraintStart_toStartOf="@+id/iv_total_views"
        app:layout_constraintTop_toBottomOf="@+id/iv_total_views" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_tags"
        android:layout_width="34dp"
        android:layout_height="34dp"

        android:src="@drawable/ic_tag"
        android:tint="@color/primary_color"

        app:layout_constraintTop_toBottomOf="@+id/materialTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/iv_tag_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tags"

        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_tags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/v_separator2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_tag_title"
        android:background="@color/seconndary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_separator2" />









</androidx.constraintlayout.widget.ConstraintLayout>